# irrigation-agent

./: .dockerignore  .gitignore  .zshrc  Dockerfile  LICENSE  README.md  app.py  client.py  inference.py  irrigation_env.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server_app.py  visualize.py
agent/: policy.py
grader/: grader.py
tasks/: easy.py  hard.py  medium.py
tensor_titans_irrigation/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
tensor_titans_irrigation/server/: Dockerfile  __init__.py  app.py  tensor_titans_irrigation_environment.py
