[project]
name = "tensor_titans_irrigation"
version = "0.1.0"
description = "AI agent for smart irrigation management"
authors = [
    { name = "Tensor Titans" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib",
    "openenv-core",
    "huggingface_hub"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"