[project]
name = "tensor_titans_irrigation"
version = "0.1.0"
description = "AquaMind: AI irrigation that saves water and protects crop health"
authors = [
    { name = "Tensor Titans" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib",
    "openenv-core[core]>=0.2.1",
    "openai>=1.40.0",
    "huggingface_hub==0.23.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
